--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@ track filter=lfs diff=lfs merge=lfs -text
 Downloads/Flicker8k_text.zip filter=lfs diff=lfs merge=lfs -text
 Downloads/Flicker8k_Dataset.zip filter=lfs diff=lfs merge=lfs -text
 git filter=lfs diff=lfs merge=lfs -text
+
+*.zip filter=lfs diff=lfs merge=lfs -text
