--- a/requirements.txt
+++ b/requirements.txt
@@ -1,536 +1,120 @@
-absl-py==1.4.0
-alabaster==0.7.12
-anaconda-client==1.9.0
-anaconda-navigator==2.1.1
-anaconda-project==0.10.1
-anyio==2.2.0
-appdirs==1.4.4
-applaunchservices==0.2.1
-appnope==0.1.2
-appscript==1.1.2
-argh==0.26.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==0.13.1
-asn1crypto==1.4.0
-astroid==2.6.6
-astropy==4.3.1
-asttokens==2.0.5
-astunparse==1.6.3
-async-generator==1.10
-atomicwrites==1.4.0
-attrs==22.1.0
-Automat==20.2.0
-autopep8==1.6.0
-Babel==2.11.0
-backcall==0.2.0
-backports.functools-lru-cache==1.6.4
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-bcrypt==3.2.0
-beautifulsoup4==4.11.1
-binaryornot==0.4.4
-bitarray==2.5.1
-bkcharts==0.2
-black==22.6.0
-bleach==4.1.0
-bokeh==2.4.1
-boltons==23.0.0
-boto==2.49.0
-boto3==1.24.28
-botocore==1.27.59
-Bottleneck==1.3.5
-brotlipy==0.7.0
-cached-property==1.5.2
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==2.0.4
-chromedriver-autoinstaller==0.4.0
-click==8.0.4
-cloudpickle==2.0.0
-clyent==1.2.2
-colorama==0.4.6
-colorcet==3.0.1
-comm==0.1.2
-conda==23.3.1
-conda-build==3.23.3
-conda-content-trust==0.1.3
-conda-pack==0.6.0
-conda-package-handling==2.0.2
-conda_package_streaming==0.7.0
-conda-repo-cli==1.0.4
-conda-token==0.3.0
-conda-verify==3.4.2
-configparser==5.2.0
-constantly==15.1.0
-contextlib2==0.6.0.post1
-contourpy==1.0.5
-cookiecutter==1.7.3
-cryptography==38.0.4
-cssselect==1.1.0
-cycler==0.11.0
-Cython==0.29.32
-cytoolz==0.12.0
-daal4py==2021.6.0
-dask==2021.10.0
-datashader==0.14.3
-datashape==0.5.4
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-diff-match-patch==20200713
-distributed==2021.10.0
-docopt==0.6.2
-docutils==0.17.1
-entrypoints==0.4
-et-xmlfile==1.1.0
-executing==0.8.3
-fastcache==1.1.0
-fastjsonschema==2.16.2
-filelock==3.9.0
-flake8==3.9.2
-Flask==2.2.2
-flatbuffers==23.3.3
-flit_core==3.6.0
-fonttools==4.25.0
-fsspec==2022.11.0
-future==0.18.2
-gast==0.4.0
-gensim==4.3.0
-gevent==21.8.0
-glob2==0.7
-gmpy2==2.1.2
-google-auth==2.17.2
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-graphviz==0.20.1
-greenlet==1.1.1
-grpcio==1.53.0
-h11==0.13.0
-h5py==3.7.0
-HeapDict==1.0.1
-holoviews==1.14.8
-html5lib==1.1
-hvplot==0.8.2
-hyperlink==21.0.0
-idna==3.4
-imagecodecs==2021.8.26
-imageio==2.19.3
-imagesize==1.4.1
-importlib-metadata==4.11.3
-incremental==21.3.0
-inflection==0.5.1
-iniconfig==1.1.1
-intake==0.6.6
-intervaltree==3.1.0
-ipykernel==6.19.2
-ipython==8.8.0
-ipython-autotime==0.3.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-isort==5.9.3
-itemadapter==0.3.0
-itemloaders==1.0.4
-itsdangerous==2.0.1
-jax==0.4.8
-jdcal==1.4.1
-jedi==0.18.1
-Jinja2==3.1.2
-jinja2-time==0.2.0
-jmespath==0.10.0
-joblib==1.1.1
-json5==0.9.6
-jsonpatch==1.32
-jsonpath-ng==1.5.3
-jsonpointer==2.1
-jsonschema==4.16.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter_core==5.1.1
-jupyter-server==1.4.1
-jupyterlab==3.2.1
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.8.2
-jupyterlab-widgets==1.0.0
-keras==2.12.0
-keyring==23.4.0
-kiwisolver==1.4.4
-lazy-object-proxy==1.6.0
-libarchive-c==2.9
-libclang==16.0.0
-llvmlite==0.39.1
-locket==1.0.0
-lxml==4.9.1
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-mccabe==0.6.1
-mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-ml-dtypes==0.0.4
-mlxtend==0.22.0
-mock==4.0.3
-more-itertools==8.10.0
-mpmath==1.2.1
-msgpack==1.0.3
-multipledispatch==0.6.0
-munkres==1.1.4
-mypy-extensions==0.4.3
-mysql-connector-python==8.0.28
-navigator-updater==0.2.1
-nbclassic==0.2.6
-nbclient==0.5.13
-nbconvert==6.5.0
-nbformat==5.7.0
-neo4j==4.4.2
-nest-asyncio==1.5.6
-networkx==2.8.4
-nltk==3.7
-nose==1.3.7
-notebook==6.4.5
-np==1.0.2
-numba==0.56.4
-numexpr==2.8.4
-numpy==1.23.5
-numpydoc==1.1.0
-oauthlib==3.2.0
-olefile==0.46
-openpyxl==3.0.10
-opt-einsum==3.3.0
-outcome==1.2.0
-packaging==22.0
-pandas==1.5.2
-pandocfilters==1.5.0
-panel==0.14.2
-param==1.12.3
-parsel==1.6.0
-parso==0.8.3
-partd==1.2.0
-path==16.0.0
-pathlib2==2.3.6
-pathspec==0.10.3
-patsy==0.5.3
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.3.0
-pip==23.1.2
-pipreqs==0.4.11
-pkginfo==1.8.3
-platformdirs==2.5.2
-plotly==5.9.0
-pluggy==1.0.0
-ply==3.11
-pooch==1.4.0
-poyo==0.5.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.36
-Protego==0.1.16
-protobuf==4.22.1
-psutil==5.9.0
-psycopg2==2.9.3
-psycopg2-binary==2.9.3
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.7.0
-pycosat==0.6.4
-pycparser==2.21
-pyct==0.5.0
-pycurl==7.45.1
-PyDispatcher==2.0.5
-pydocstyle==6.3.0
-pyerfa==2.0.0
-pyflakes==2.3.1
-Pygments==2.11.2
-PyHamcrest==2.0.2
-PyJWT==2.4.0
-pylint==2.9.6
-pyls-spyder==0.4.0
-pyobjc==9.0.1
-pyobjc-core==9.0.1
-pyobjc-framework-Accessibility==9.0.1
-pyobjc-framework-Accounts==9.0.1
-pyobjc-framework-AddressBook==9.0.1
-pyobjc-framework-AdServices==9.0.1
-pyobjc-framework-AdSupport==9.0.1
-pyobjc-framework-AppleScriptKit==9.0.1
-pyobjc-framework-AppleScriptObjC==9.0.1
-pyobjc-framework-ApplicationServices==9.0.1
-pyobjc-framework-AppTrackingTransparency==9.0.1
-pyobjc-framework-AudioVideoBridging==9.0.1
-pyobjc-framework-AuthenticationServices==9.0.1
-pyobjc-framework-AutomaticAssessmentConfiguration==9.0.1
-pyobjc-framework-Automator==9.0.1
-pyobjc-framework-AVFoundation==9.0.1
-pyobjc-framework-AVKit==9.0.1
-pyobjc-framework-BusinessChat==9.0.1
-pyobjc-framework-CalendarStore==9.0.1
-pyobjc-framework-CallKit==9.0.1
-pyobjc-framework-CFNetwork==9.0.1
-pyobjc-framework-ClassKit==9.0.1
-pyobjc-framework-CloudKit==9.0.1
-pyobjc-framework-Cocoa==9.0.1
-pyobjc-framework-Collaboration==9.0.1
-pyobjc-framework-ColorSync==9.0.1
-pyobjc-framework-Contacts==9.0.1
-pyobjc-framework-ContactsUI==9.0.1
-pyobjc-framework-CoreAudio==9.0.1
-pyobjc-framework-CoreAudioKit==9.0.1
-pyobjc-framework-CoreBluetooth==9.0.1
-pyobjc-framework-CoreData==9.0.1
-pyobjc-framework-CoreHaptics==9.0.1
-pyobjc-framework-CoreLocation==9.0.1
-pyobjc-framework-CoreMedia==9.0.1
-pyobjc-framework-CoreMediaIO==9.0.1
-pyobjc-framework-CoreMIDI==9.0.1
-pyobjc-framework-CoreML==9.0.1
-pyobjc-framework-CoreMotion==9.0.1
-pyobjc-framework-CoreServices==9.0.1
-pyobjc-framework-CoreSpotlight==9.0.1
-pyobjc-framework-CoreText==9.0.1
-pyobjc-framework-CoreWLAN==9.0.1
-pyobjc-framework-CryptoTokenKit==9.0.1
-pyobjc-framework-DataDetection==9.0.1
-pyobjc-framework-DeviceCheck==9.0.1
-pyobjc-framework-DictionaryServices==9.0.1
-pyobjc-framework-DiscRecording==9.0.1
-pyobjc-framework-DiscRecordingUI==9.0.1
-pyobjc-framework-DiskArbitration==9.0.1
-pyobjc-framework-DVDPlayback==9.0.1
-pyobjc-framework-EventKit==9.0.1
-pyobjc-framework-ExceptionHandling==9.0.1
-pyobjc-framework-ExecutionPolicy==9.0.1
-pyobjc-framework-ExternalAccessory==9.0.1
-pyobjc-framework-FileProvider==9.0.1
-pyobjc-framework-FileProviderUI==9.0.1
-pyobjc-framework-FinderSync==9.0.1
-pyobjc-framework-FSEvents==9.0.1
-pyobjc-framework-GameCenter==9.0.1
-pyobjc-framework-GameController==9.0.1
-pyobjc-framework-GameKit==9.0.1
-pyobjc-framework-GameplayKit==9.0.1
-pyobjc-framework-ImageCaptureCore==9.0.1
-pyobjc-framework-IMServicePlugIn==9.0.1
-pyobjc-framework-InputMethodKit==9.0.1
-pyobjc-framework-InstallerPlugins==9.0.1
-pyobjc-framework-InstantMessage==9.0.1
-pyobjc-framework-Intents==9.0.1
-pyobjc-framework-IntentsUI==9.0.1
-pyobjc-framework-IOSurface==9.0.1
-pyobjc-framework-iTunesLibrary==9.0.1
-pyobjc-framework-KernelManagement==9.0.1
-pyobjc-framework-LatentSemanticMapping==9.0.1
-pyobjc-framework-LaunchServices==9.0.1
-pyobjc-framework-libdispatch==9.0.1
-pyobjc-framework-LinkPresentation==9.0.1
-pyobjc-framework-LocalAuthentication==9.0.1
-pyobjc-framework-LocalAuthenticationEmbeddedUI==9.0.1
-pyobjc-framework-MailKit==9.0.1
-pyobjc-framework-MapKit==9.0.1
-pyobjc-framework-MediaAccessibility==9.0.1
-pyobjc-framework-MediaLibrary==9.0.1
-pyobjc-framework-MediaPlayer==9.0.1
-pyobjc-framework-MediaToolbox==9.0.1
-pyobjc-framework-Metal==9.0.1
-pyobjc-framework-MetalKit==9.0.1
-pyobjc-framework-MetalPerformanceShaders==9.0.1
-pyobjc-framework-MetalPerformanceShadersGraph==9.0.1
-pyobjc-framework-MetricKit==9.0.1
-pyobjc-framework-MLCompute==9.0.1
-pyobjc-framework-ModelIO==9.0.1
-pyobjc-framework-MultipeerConnectivity==9.0.1
-pyobjc-framework-NaturalLanguage==9.0.1
-pyobjc-framework-NetFS==9.0.1
-pyobjc-framework-Network==9.0.1
-pyobjc-framework-NetworkExtension==9.0.1
-pyobjc-framework-NotificationCenter==9.0.1
-pyobjc-framework-OpenDirectory==9.0.1
-pyobjc-framework-OSAKit==9.0.1
-pyobjc-framework-OSLog==9.0.1
-pyobjc-framework-PassKit==9.0.1
-pyobjc-framework-PencilKit==9.0.1
-pyobjc-framework-Photos==9.0.1
-pyobjc-framework-PhotosUI==9.0.1
-pyobjc-framework-PreferencePanes==9.0.1
-pyobjc-framework-PushKit==9.0.1
-pyobjc-framework-Quartz==9.0.1
-pyobjc-framework-QuickLookThumbnailing==9.0.1
-pyobjc-framework-ReplayKit==9.0.1
-pyobjc-framework-SafariServices==9.0.1
-pyobjc-framework-SceneKit==9.0.1
-pyobjc-framework-ScreenSaver==9.0.1
-pyobjc-framework-ScreenTime==9.0.1
-pyobjc-framework-ScriptingBridge==9.0.1
-pyobjc-framework-SearchKit==9.0.1
-pyobjc-framework-Security==9.0.1
-pyobjc-framework-SecurityFoundation==9.0.1
-pyobjc-framework-SecurityInterface==9.0.1
-pyobjc-framework-ServiceManagement==9.0.1
-pyobjc-framework-ShazamKit==9.0.1
-pyobjc-framework-Social==9.0.1
-pyobjc-framework-SoundAnalysis==9.0.1
-pyobjc-framework-Speech==9.0.1
-pyobjc-framework-SpriteKit==9.0.1
-pyobjc-framework-StoreKit==9.0.1
-pyobjc-framework-SyncServices==9.0.1
-pyobjc-framework-SystemConfiguration==9.0.1
-pyobjc-framework-SystemExtensions==9.0.1
-pyobjc-framework-UniformTypeIdentifiers==9.0.1
-pyobjc-framework-UserNotifications==9.0.1
-pyobjc-framework-UserNotificationsUI==9.0.1
-pyobjc-framework-VideoSubscriberAccount==9.0.1
-pyobjc-framework-VideoToolbox==9.0.1
-pyobjc-framework-Virtualization==9.0.1
-pyobjc-framework-Vision==9.0.1
-pyobjc-framework-WebKit==9.0.1
-pyodbc==4.0.34
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-pyrsistent==0.18.0
-PySocks==1.7.1
-pytest==7.1.2
-python-dateutil==2.8.2
-python-dotenv==0.21.0
-python-lsp-black==1.0.0
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.2.4
-python-slugify==5.0.2
-python-snappy==0.6.1
-pyttsx3==2.90
-pytz==2022.7
-pyviz-comms==2.0.2
-PyWavelets==1.4.1
-PyYAML==6.0
-pyzmq==23.2.0
-QDarkStyle==3.0.2
-qstylizer==0.2.2
-QtAwesome==1.2.2
-qtconsole==5.4.0
-QtPy==2.2.0
-queuelib==1.5.0
-regex==2022.7.9
-requests==2.28.1
-requests-file==1.5.1
-requests-oauthlib==1.3.0
-rope==0.22.0
-rsa==4.9
-Rtree==1.0.1
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
-ruamel-yaml-conda==0.17.21
-s3transfer==0.6.0
-scikit-image==0.18.3
-scikit-learn==1.0.2
-scikit-learn-intelex==2021.20221004.121333
-scikit-plot==0.3.7
-scipy==1.10.0
-Scrapy==2.6.2
-seaborn==0.12.2
-selenium==4.4.3
-Send2Trash==1.8.0
-service-identity==18.1.0
-setuptools==65.6.3
-simplegeneric==0.8.1
-singledispatch==3.7.0
-sip==4.19.13
-six==1.16.0
-sklearn==0.0
-smart-open==5.2.1
-sniffio==1.2.0
-snowballstemmer==2.2.0
-sortedcollections==2.1.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-Sphinx==4.2.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-sphinxcontrib-websupport==1.2.4
-spyder==5.1.5
-spyder-kernels==2.1.3
-SQLAlchemy==1.4.39
-stack-data==0.2.0
-statsmodels==0.13.5
-sympy==1.11.1
-tables==3.7.0
-tabulate==0.8.10
-TBB==0.2
-tblib==1.7.0
-tenacity==8.0.1
-tensorboard==2.12.1
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.32.0
-termcolor==2.2.0
-terminado==0.17.1
-testpath==0.6.0
-text-unidecode==1.3
-textdistance==4.2.1
-threadpoolctl==2.2.0
-three-merge==0.1.1
-tifffile==2021.7.2
-tinycss==0.4
-tinycss2==1.1.1
-tldextract==3.2.0
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-torch==1.13.1
-torchaudio==0.13.1
-torchvision==0.14.1
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.7.1
-trio==0.21.0
-trio-websocket==0.9.2
-tweepy==4.5.0
-Twisted==22.2.0
-twitter-stream.py==0.8.8
-twython==3.9.1
-typed-ast==1.4.3
-typing_extensions==4.4.0
-ujson==5.4.0
-unicodecsv==0.14.1
-Unidecode==1.2.0
-urllib3==1.26.7
-w3lib==1.21.0
-watchdog==2.1.3
-wcwidth==0.2.5
-webdriver-manager==3.8.3
-webencodings==0.5.1
-Werkzeug==2.2.2
-wheel==0.37.1
-whichcraft==0.6.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-wsproto==1.2.0
-wurlitzer==3.0.2
-xarray==2022.11.0
-xgboost==1.6.2
-xlrd==2.0.1
-XlsxWriter==3.0.3
-xlwings==0.27.15
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf==0.31.0
-yarg==0.1.9
-zict==2.1.0
-zipp==3.11.0
-zope.event==4.5.0
-zope.interface==5.4.0
-zstandard==0.18.0
+anaconda-project
+argh
+asn1crypto
+astropy
+autopep8
+backports.shutil-get-terminal-size
+bcrypt
+bitarray
+bkcharts
+boltons
+boto
+boto3
+bottleneck
+brotlipy
+cached-property
+chromedriver-autoinstaller
+colorama
+conda-build
+conda-package-handling
+conda-repo-cli
+conda-token
+conda-verify
+configparser
+contextlib2
+cython
+cytoolz
+datashader
+distributed
+fastcache
+flake8
+flask
+flit-core
+gensim
+gevent
+gmpy2
+graphviz
+html5lib
+hvplot
+imagecodecs
+intake
+ipython-autotime
+jdcal
+jsonpatch
+jsonpath-ng
+jupyter
+jupyterlab
+mkl-fft
+mkl-random
+mkl-service
+mlxtend
+mock
+more-itertools
+munkres
+mysql-connector-python
+navigator-updater
+neo4j
+nltk
+nose
+np
+olefile
+openpyxl
+path
+pathlib2
+pep8
+pip-chill
+pipreqs
+plotly
+pooch
+psycopg2
+psycopg2-binary
+pycurl
+pydocstyle
+pyhamcrest
+pyjwt
+pyodbc
+pysocks
+pytest
+python-snappy
+pyttsx3
+rope
+ruamel-yaml-conda
+scikit-image
+scikit-learn-intelex
+scikit-plot
+scrapy
+seaborn
+selenium
+simplegeneric
+singledispatch
+sip
+sklearn
+sortedcollections
+sphinxcontrib-websupport
+spyder
+sqlalchemy
+statsmodels
+sympy
+tables
+tabulate
+tbb
+tensorflow
+testpath
+tinycss
+torchaudio
+torchvision
+tweepy
+twitter-stream.py
+twython
+typed-ast
+unicodecsv
+unidecode
+webdriver-manager
+whichcraft
+xgboost
+xlrd
+xlsxwriter
+xlwings
+xlwt
+xmltodict
+yapf
