adding input model type

--- a/.github/workflows/dataset_download.yml
+++ b/.github/workflows/dataset_download.yml
@@ -12,6 +12,17 @@ on:
           - 10
           - 20
           - 50
+        
+      model_type:
+        description: 'Model type'
+        required: true
+        default: 'LSTM'
+        type: choice
+        options:
+          - LSTM
+          - Attention
+
+      
   # push:
   #   branches:
   #     - main
@@ -48,6 +59,7 @@ jobs:
       - name: Run Python script
         env:
           EPOCH_NUMBER: ${{ inputs.epoch_number }}
-        run: python ImageCaptionGenerator.py $EPOCH_NUMBER
+          MODEL_TYPE: ${{ inputs.model_type }}
+        run: python ImageCaptionGenerator.py $EPOCH_NUMBER $MODEL_TYPE
 
 
