--- a/.github/workflows/dataset_download.yml
+++ b/.github/workflows/dataset_download.yml
@@ -64,9 +64,8 @@ jobs:
         run: |
           pipenv install --deploy --dev --verbose
 
-      
       - name: Download text file
-        run: curl -L -o download_ds_file.zip "https://drive.google.com/file/d/1sIxT8WrW21vaQvUY3BLGnnmAY-ocZhpO/view?usp=sharing"
+        run: curl -L -o download_ds_file.zip "https://drive.google.com/uc?export=download&id=1sIxT8WrW21vaQvUY3BLGnnmAY-ocZhpO"
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
