--- a/.github/workflows/dataset_download.yml
+++ b/.github/workflows/dataset_download.yml
@@ -67,20 +67,10 @@ jobs:
       - name: Download text file
         run: curl -L -o download_ds_file.zip "https://drive.google.com/uc?export=download&id=1sIxT8WrW21vaQvUY3BLGnnmAY-ocZhpO"
 
-      - name: Download ZIP file
-        run: |
-          wget -O file.zip "https://drive.google.com/uc?export=download&id=176wGCHHp2DpoDblsliEkX4fTpfQUbZOq"
+      - name: Download text file
+        run: curl -L -o download_image_file.zip "https://drive.google.com/uc?export=download&id=176wGCHHp2DpoDblsliEkX4fTpfQUbZOq"
+
       
-      - name: Check if file exists
-        run: |
-          if [ -f "file.zip" ]; then
-            echo "File downloaded successfully."
-            unzip file.zip
-            echo "File unzipped successfully."
-          else
-            echo "File download failed."
-            exit 1
-          fi
         
       - name: Set up Node.js
         uses: actions/setup-node@v2
