--- a/.github/workflows/dataset_download.yml
+++ b/.github/workflows/dataset_download.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: ImageCaptionGenerators
 
 on:
   workflow_dispatch:
@@ -13,7 +13,7 @@ on:
           - Attention
 
       epoch_number:
-        description: "Epoch number"
+        description: "Epoch Number"
         required: true
         default: "10"
         type: choice
@@ -23,6 +23,8 @@ on:
           - 10
           - 20
           - 50
+          - 70
+          - 100
 
       batch_size:
         description: "Batch Size"
@@ -36,6 +38,7 @@ on:
           - 20
           - 32
           - 64
+          - 128
   # For automated triggers;
   # push:
   #   branches:
